--- a/halwa.html
+++ b/halwa.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="myStyle.css">
     </head>
 <title> recepie.. </title>
-<body background="C:\Users\User\Desktop\html\4.png   ">
+<body background="4.png   ">
 <b>
     <big><h1 align= "left" style= "color:white ; font-family:DIRGA ; font-size: 65" > HALWA </h1></big>
 
