--- a/manchurian.html
+++ b/manchurian.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="myStyle.css">
     </head>
 <title> recepie.. </title>
-<body background="C:\Users\User\Desktop\html\oip.png">
+<body background="oip.png">
 <b>
 <h1 align= "left" style= "color:white ; font-family:DIRGA ;font-size: 65" >VEG - MANCHURIAN </h1>
 <h2  style="color: white ;text-align:left">Ingredients </h2>
