--- a/recepie.html
+++ b/recepie.html
@@ -7,7 +7,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="myStyle.css">
     </head>
-    <body background =" C:\Users\User\Desktop\html\2.png"  width=" 1920" height="1080">
+    <body background ="2.png"  width=" 1920" height="1080">
     <big>
     <h1 style="color:white; font-family:dirga ; font-size: 175" > Pasta </h1>
     </big>
