--- a/noodle.html
+++ b/noodle.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="myStyle.css">
     </head>
 <title> recepie.. </title>
-<body background="3.PNG">
+<body background="3.png">
 <b>
 <h1 align= "left" style= "color:white ; font-family:DIRGA ; font-size: 65" > NOODLE </h1>
 <h2  style="color: white ;text-align:left">Ingredients </h2>
