--- a/profile.html
+++ b/profile.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title> profile..  </title>
-<body background = "5.jpg">
+<body background = "5.JPG">
 <h1 align= "center" style= "color:silver ; font-family:aerial" >..MY PROFILE.. <br> 
 <img src ="name.JPEG" width =" 300" height=" 370" border=" 5 "  style= "color:grey"> 
 
