--- a/halwa.html
+++ b/halwa.html
@@ -6,7 +6,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="myStyle.css">
     </head>
-<title> recepie.. </title>
+<title> HALWA </title>
 <body background="4.png   ">
 <b>
     <big><h1 align= "left" style= "color:white ; font-family:DIRGA ; font-size: 65" > HALWA </h1></big>
