--- a/manchurian.html
+++ b/manchurian.html
@@ -6,8 +6,8 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="myStyle.css">
     </head>
-<title> recepie.. </title>
-<body background="7.PNG">
+<title> MANCHURIAN </title>
+<body background="7.png">
 <b>
 <h1 align= "left" style= "color:white ; font-family:DIRGA ;font-size: 65" >VEG - MANCHURIAN </h1>
 <h2  style="color: white ;text-align:left">Ingredients </h2>
