--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title> profile..  </title>
+<title> profile  </title>
 <body background = "5.jpg">
 <h1 align= "center" style= "color:silver ; font-family:aerial" >..MY PROFILE.. <br> 
 <img src ="6.JPG" width =" 300" height=" 370" border=" 5 "  style= "color:grey"> 
