--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,7 @@
 <title> profile  </title>
 <body background = "5.jpg">
 <h1 align= "center" style= "color:silver ; font-family:aerial" >..MY PROFILE.. <br> 
-<img src ="6.JPG" width =" 300" height=" 370" border=" 5 "  style= "color:grey"> 
+<img src ="6.jpg" width ="300" height="370" border="5"  style= "color:grey"> 
 
 <p  align= "center" style= "color:gold ; font-family:" >  Himanshu Gavhane </br>
 <p  align= "center" style= "color:gold ; font-family:Georgia" > Hobby  ~ 
