--- a/profile.html
+++ b/profile.html
@@ -1,7 +1,12 @@
 <html>
 <head>
 <title> profile  </title>
-<body background = "5.jpg">
+<body>
+<style>
+	body{
+		background-image: url(5.jpg);
+	}
+</style>
 <h1 align= "center" style= "color:silver ; font-family:aerial" >..MY PROFILE.. <br> 
 <img src ="6.jpg" width ="300" height="370" border="5"  style= "color:grey"> 
 
@@ -19,3 +24,6 @@
 <li align= "left" style= "color:lightblue ; font-family:aerial" > brother profession ~ web designer
 	<a href="https://kshitij-gavhane.github.io/"  style="color:red"> visit site </a> </p> 
 	<hr size = "7" width = "100%  align = "left" >
+</body>
+</head>
+</html>
