--- a/halwa.html
+++ b/halwa.html
@@ -42,6 +42,7 @@
      <h2 style="text-align: left;color:white" > note :</h2>
      <h3 style="text-align: left;color:#BFBFBF"> this is best recepie in lockdown period to make</h3>
      <hr align= "center" style= "color:white ; font-family:aerial" >>
-     <h3 align= "center" style= "color:silver ; font-family:aerial" > new recepies will be uploaded soon
+     <h3 align= "center" style= "color:silver ; font-family:aerial" > new recepies will be uploaded soon</h3>
+    <h2><a href="manchurian.html"  style="color:red"> ⬅⬅previous</a></h2>
     </body>
 </html>
