--- a/manchurian.html
+++ b/manchurian.html
@@ -63,3 +63,5 @@
     </h3>
     <h2>
      <a href="halwa.html"  style="color:red"> next ⇒⇒</a>
+
+    <h2><a href="noodle.html"  style="color:red"> ⬅⬅previous</a></h2>
