--- a/noodle.html
+++ b/noodle.html
@@ -32,7 +32,7 @@
         <li>serve.</li>
     </ol>
     </h3>
-    <h2>
-     <a href="manchurian.html"  style="color:red"> next ⇒⇒</a>
+    <h2><a href="manchurian.html"  style="color:red"> next ⇒⇒</a></h2>
+    <h2><a href="recepie.html"  style="color:red"> ⬅⬅previous</a></h2>
     </body>
 </html>
