--- a/manchurian.html
+++ b/manchurian.html
@@ -38,8 +38,8 @@
         <li>2 tsp. cornflour dissolved in water for a slurry</li>
         <li>1 tbsp. vegetable oil</li>
        
-    </ul>
-    </h3>
+</ul>
+</h3>
     <h2 style="text-align: left;color:white">Directions</h2>
     <h3 style="text-align: left;color:#BFBFBF">
     <ol>
@@ -62,6 +62,7 @@
     </ol>
     </h3>
     <h2>
-     <a href="halwa.html"  style="color:red"> next ⇒⇒</a>
+     <a href="halwa.html"  style="color:red"> next ⇒⇒</a> 
+    </h2>
 
-    <h2><a href="noodle.html"  style="color:red"> ⬅⬅previous</a></h2>
+    <h2><a href="noodle.html"  style="color:blue"> ⬅⬅previous</a></h2>
