--- a/manchurian.html
+++ b/manchurian.html
@@ -7,7 +7,12 @@
         <link rel="stylesheet" type="text/css" href="myStyle.css">
     </head>
 <title> MANCHURIAN </title>
-<body background="7.PNG">
+<body>
+<style>
+    body{
+        background-image: url(7.PNG);
+    }
+</style>
 <b>
 <h1 align= "left" style= "color:white ; font-family:DIRGA ;font-size: 65" >VEG - MANCHURIAN </h1>
 <h2  style="color: white ;text-align:left">Ingredients </h2>
