--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title> himanshu gavhane😃😃 </title>
+<link rel="shortcut icon" type="image/jpg" href="h.ico"/>
 <body background= "1.jpg">
 <style>
 .aligncenter {
